src/test/ui/single-use-lifetime/two-uses-in-inherent-method-argument-and-return.stderr
error: lifetime parameter `'f` only used once
  --> $DIR/two-uses-in-inherent-method-argument-and-return.rs:12:6
   |
LL | impl<'f> Foo<'f> {
   |      ^^      -- ...is used only here
   |      |
   |      this lifetime...
   |
note: lint level defined here
  --> $DIR/two-uses-in-inherent-method-argument-and-return.rs:4:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

